[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/runescape_uf.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://PauseMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.827451 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.00392157, 0.145098, 0.72549 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.815686, 0.815686, 0.815686, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0.133333, 0.12549, 0.12549, 0.6 )
shadow_size = 2
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.368627, 0.368627, 0.368627, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0.133333, 0.12549, 0.12549, 0.6 )
shadow_size = 2
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0.133333, 0.12549, 0.12549, 0.6 )
shadow_size = 2
shadow_offset = Vector2( 0, 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.231373 )
margin_right = 321.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( -63, 40 )
custom_styles/panel = SubResource( 1 )

[node name="Panel2" type="Panel" parent="."]
margin_left = 68.0
margin_top = 24.0
margin_right = 253.0
margin_bottom = 156.0
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.561
anchor_right = 0.5
anchor_bottom = 0.561
margin_left = -65.5
margin_top = -53.052
margin_right = 67.5
margin_bottom = 33.948
custom_constants/separation = 11
alignment = 1

[node name="resume" type="Button" parent="Panel2/VBoxContainer"]
margin_right = 133.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Reanudar"

[node name="menu" type="Button" parent="Panel2/VBoxContainer"]
margin_top = 32.0
margin_right = 133.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "Menu d'inici"

[node name="quit" type="Button" parent="Panel2/VBoxContainer"]
margin_top = 65.0
margin_right = 133.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "Tancar"

[node name="Panel3" type="Panel" parent="."]
margin_left = 68.0
margin_top = 24.0
margin_right = 253.0
margin_bottom = 156.0
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel3"]
anchor_left = 0.5
anchor_top = 0.561
anchor_right = 0.5
anchor_bottom = 0.561
margin_left = -72.5
margin_top = -64.052
margin_right = 77.5
margin_bottom = 36.948
custom_constants/separation = 11
alignment = 1

[node name="ask" type="Label" parent="Panel3/VBoxContainer"]
margin_right = 150.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Al sortir perds 
el progres, estas segur?"
align = 1
valign = 1

[node name="yes" type="Button" parent="Panel3/VBoxContainer"]
margin_top = 46.0
margin_right = 150.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "Si"

[node name="no" type="Button" parent="Panel3/VBoxContainer"]
margin_top = 79.0
margin_right = 150.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "No"

[connection signal="pressed" from="Panel2/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel2/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Panel2/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel3/VBoxContainer/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Panel3/VBoxContainer/no" to="." method="_on_no_pressed"]
